changed homepage hero

--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
 
     <main>
         <section class="hero">
-            <h2>
+
+            <h1>Creativity that <em>Blossoms</em></h1>
+
+            <div class="flower-hero">
+                <img src="img/png/hero-flower-light.png" class="flower-hero1" alt="">
+                <img src="img/png/hero-flower-mid.png" class="flower-hero2" alt="">
+                <img src="img/png/hero-flower-dark.png" class="flower-hero3" alt="">
+                <img src="img/png/hero-flower-light.png" class="flower-hero4" alt="">
+                <img src="img/png/hero-flower-mid.png" class="flower-hero5" alt="">
+                <img src="img/png/hero-flower-dark.png" class="flower-hero6" alt="">
+                <img src="img/png/hero-flower-mid.png" class="flower-hero7" alt="">
+                <img src="img/png/hero-flower-light.png" class="flower-hero8" alt="">
+            </div>
+
+            <!-- <h2>
                 Designing with
                 <span>
                     <span>purpose</span>
@@ -54,88 +68,88 @@
                     <span>perspective</span>
                     <span>personality</span>
                 </span>
-            </h2>
+            </h2> -->
 
-            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p> -->
+            <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, nihil doloremque id tempora tenetur odit vel totam magni aut expedita rem fugiat, voluptate veniam officia adipisci at magnam quisquam eos a accusamus quasi et sed eaque necessitatibus? </p>
 
-            <!-- <a href="#works" class="cta-button">View My Work</a>
+            <a href="#works" class="cta-button">View My Work</a>
             </div> -->
 
         </section>
 
-        <h1 class="hide-visually">Projects</h1>
+        <h2 class="hide-visually">Projects</h1>
 
-        <section id="projects">
+            <section id="projects">
 
-            <div class="works-grid">
-                <div class="works-card">
-                    <a href="araw.html">
-                        <img src="img/webp/araw-combined-sunscreen-thumbs.webp" alt="Araw Project 1 image of combined sunscreen" width="1920" height="1800" class="works-image">
-                    </a>
-                    <div class="project-title">
-                        <h3>Araw</h3>
-                        <h3 class="project-type">Brand Identity</h3>
-                    </div>
-                </div>
-            </div>
-
-            <div class="works-grid two-column">
-                <div class="works-card">
-                    <a href="cinqueterre.html">
-                        <img src="img/webp/cinqueterre-thumbs.webp" alt="Cinque Terre Logo" width="648" height="648" class="works-image">
-                    </a>
-                    <div class="project-title">
-                        <h3>Cinque Terre</h3>
-                        <h3 class="project-type">Brand Identity</h3>
-                    </div>
-                </div>
-                <div class="works-card">
-                    <a href="boozi.html">
-                        <img src="img/webp/boozi-thumbs.webp" alt="boozi-can" width="2700" height="2700" class="works-image">
-                    </a>
-                    <div class="project-title">
-                        <h3>Boozi</h3>
-                        <h3 class="project-type">Graphic Typography</h3>
+                <div class="works-grid">
+                    <div class="works-card">
+                        <a href="araw.html">
+                            <img src="img/webp/araw-combined-sunscreen-thumbs.webp" alt="Araw Project 1 image of combined sunscreen" width="1920" height="1800" class="works-image">
+                        </a>
+                        <div class="project-title">
+                            <h3>Araw</h3>
+                            <h3 class="project-type">Brand Identity</h3>
+                        </div>
                     </div>
                 </div>
 
-            </div>
-
-            <div class="works-grid">
-                <div class="works-card">
-                    <a href="#">
-                        <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
-                    </a>
-                    <div class="project-title">
-                        <h3>Resting Mug</h3>
-                        <h3 class="project-type">Brand Identity</h3>
+                <div class="works-grid two-column">
+                    <div class="works-card">
+                        <a href="cinqueterre.html">
+                            <img src="img/webp/cinqueterre-thumbs.webp" alt="Cinque Terre Logo" width="648" height="648" class="works-image">
+                        </a>
+                        <div class="project-title">
+                            <h3>Cinque Terre</h3>
+                            <h3 class="project-type">Brand Identity</h3>
+                        </div>
                     </div>
-                </div>
-            </div>
-
-            <div class="works-grid two-column light">
-                <div class="works-card">
-                    <a href="krishnacow.html">
-                        <img src="img/webp/krishnacow-thumbs.webp" alt="krishna logo" width="1080" height="1080" class="works-image">
-                    </a>
-                    <div class="project-title">
-                        <h3>Krishna Cow Sanctuary</h3>
-                        <h3 class="project-type">Logo Redesign</h3>
+                    <div class="works-card">
+                        <a href="boozi.html">
+                            <img src="img/webp/boozi-thumbs.webp" alt="boozi-can" width="2700" height="2700" class="works-image">
+                        </a>
+                        <div class="project-title">
+                            <h3>Boozi</h3>
+                            <h3 class="project-type">Graphic Typography</h3>
+                        </div>
                     </div>
+
                 </div>
 
-                <div class="works-card">
-                    <a href="charlesandrayeames.html">
-                        <img src="img/webp/eames-front-page.webp" alt="Layout" width="1080" height="1080" class="works-image">
-                    </a>
-                    <div class="project-title">
-                        <h3>Charles and Ray Eames</h3>
-                        <h3 class="project-type">Editorial</h3>
+                <div class="works-grid">
+                    <div class="works-card">
+                        <a href="#">
+                            <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
+                        </a>
+                        <div class="project-title">
+                            <h3>Resting Mug</h3>
+                            <h3 class="project-type">Brand Identity</h3>
+                        </div>
                     </div>
                 </div>
-            </div>
 
-        </section>
+                <div class="works-grid two-column light">
+                    <div class="works-card">
+                        <a href="krishnacow.html">
+                            <img src="img/webp/krishnacow-thumbs.webp" alt="krishna logo" width="1080" height="1080" class="works-image">
+                        </a>
+                        <div class="project-title">
+                            <h3>Krishna Cow Sanctuary</h3>
+                            <h3 class="project-type">Logo Redesign</h3>
+                        </div>
+                    </div>
+
+                    <div class="works-card">
+                        <a href="charlesandrayeames.html">
+                            <img src="img/webp/eames-front-page.webp" alt="Layout" width="1080" height="1080" class="works-image">
+                        </a>
+                        <div class="project-title">
+                            <h3>Charles and Ray Eames</h3>
+                            <h3 class="project-type">Editorial</h3>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
 
     </main>
 
