made minor edit for hero

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <img src="img/png/hero-flower-light.png" class="flower-hero4" alt="">
                 <img src="img/png/hero-flower-mid.png" class="flower-hero5" alt="">
                 <img src="img/png/hero-flower-dark.png" class="flower-hero6" alt="">
-                <img src="img/png/hero-flower-mid.png" class="flower-hero7" alt="">
+                <!-- <img src="img/png/hero-flower-mid.png" class="flower-hero7" alt=""> -->
                 <img src="img/png/hero-flower-light.png" class="flower-hero8" alt="">
             </div>
 
