made small change in araw

--- a/araw.html
+++ b/araw.html
@@ -57,7 +57,7 @@
                         <li><strong class="caps">Client:</strong> Student Project</li>
                         <li><strong class="caps">Project Type:</strong> Brand Identity</li>
                         <li><strong class="caps">Software:</strong> Adobe Illustrator and Photoshop</li>
-                        <li><img class="pele-icon" src="img/svg/pele-icon.svg" alt="Pele Icon" width="10" height="8"> Pele Finalist</li>
+                        <li><img class="pele-icon" src="img/svg/pele-icon.svg" alt="Pele Icon" width="10" height="8"> Pele Silver</li>
                     </ul>
                 </div>
 
