made minor edit in cinque terre subpage and added alt for flowers on hero

--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
             <h1>Creativity that <em>Blossoms</em></h1>
 
             <div class="flower-hero">
-                <img src="img/png/hero-flower-light.png" class="flower-hero1" alt="">
-                <img src="img/png/hero-flower-mid.png" class="flower-hero2" alt="">
-                <img src="img/png/hero-flower-dark.png" class="flower-hero3" alt="">
-                <img src="img/png/hero-flower-light.png" class="flower-hero4" alt="">
-                <img src="img/png/hero-flower-mid.png" class="flower-hero5" alt="">
-                <img src="img/png/hero-flower-dark.png" class="flower-hero6" alt="">
-                <!-- <img src="img/png/hero-flower-mid.png" class="flower-hero7" alt=""> -->
-                <img src="img/png/hero-flower-light.png" class="flower-hero8" alt="">
+                <img src="img/png/hero-flower-light.png" class="flower-hero1" alt="flower fading in and out while rotating" width="130" height="130">
+                <img src="img/png/hero-flower-mid.png" class="flower-hero2" alt="flower fading in and out while rotating" width="130" height="130">
+                <img src="img/png/hero-flower-dark.png" class="flower-hero3" alt="flower fading in and out while rotating" width="130" height="130">
+                <img src="img/png/hero-flower-light.png" class="flower-hero4" alt="flower fading in and out while rotating" width="130" height="130">
+                <img src="img/png/hero-flower-mid.png" class="flower-hero5" alt="flower fading in and out while rotating" width="130" height="130">
+                <img src="img/png/hero-flower-dark.png" class="flower-hero6" alt="flower fading in and out while rotating" width="130" height="130">
+                <!-- <img src="img/png/hero-flower-mid.png" class="flower-hero7" alt="flower fading in and out while rotating" width="130" height="130"> -->
+                <img src="img/png/hero-flower-light.png" class="flower-hero8" alt="flower fading in and out while rotating" width="130" height="130">
             </div>
 
             <!-- <h2>
