made edits to homepage hero and eames thumbs

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <main>
         <section class="hero">
 
-            <h1>Creativity that <em>Blossoms</em></h1>
+            <h1>Creativity that <em class="shine">blossoms</em></h1>
+
+            </div>
 
             <div class="flower-hero">
                 <img src="img/png/hero-flower-light.png" class="flower-hero1" alt="flower fading in and out while rotating" width="130" height="130">
@@ -140,7 +142,7 @@
 
                     <div class="works-card">
                         <a href="charlesandrayeames.html">
-                            <img src="img/webp/eames-front-page.webp" alt="Layout" width="1080" height="1080" class="works-image">
+                            <img src="img/webp/eames-thumbs.webp" alt="Layout" width="1080" height="1080" class="works-image">
                         </a>
                         <div class="project-title">
                             <h3>Charles and Ray Eames</h3>
