--- a/restingmug.html
+++ b/restingmug.html
@@ -69,6 +69,13 @@
             </div>
 
             <section>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/restingmug-logo-bw.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
                 <div class="project-grid two-column">
                     <div class="project-card">
                         <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
