made edits to resting mug

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
                 <div class="works-grid">
                     <div class="works-card">
-                        <a href="#">
+                        <a href="restingmug.html">
                             <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
                         </a>
                         <div class="project-title">
@@ -142,7 +142,7 @@
 
                     <div class="works-card">
                         <a href="charlesandrayeames.html">
-                            <img src="img/webp/eames-thumbs.webp" alt="Layout" width="1080" height="1080" class="works-image">
+                            <img src="img/webp/eames-thumbs.webp" alt="Layout" width="1920" height="1440" class="works-image">
                         </a>
                         <div class="project-title">
                             <h3>Charles and Ray Eames</h3>
