--- a/restingmug.html
+++ b/restingmug.html
@@ -44,7 +44,7 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="https://placehold.co/600x400" alt="Hero Image for the Resting Mug" width="" height="">
+                <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Hero Image for the Resting Mug" width="1920" height="1080">
             </div>
         </section>
 
@@ -62,7 +62,9 @@
                 <div class="three-fourths">
                     <div class="container-content">
                         <h1>Resting Mug</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae amet earum deleniti fugiat explicabo, corrupti vero quidem commodi velit eius..</p>
+                        <p>For this project, the goal was to develop a brand identity for Resting Mug, a café designed to be more than just a place to grab a cup of coffee. I aimed to create assets that authentically reflect the café&apos;s mission, values, and the welcoming atmosphere it fosters for its target audience.
+                        </p>
+                        <p>Resting Mug is a space built around comfort, community, and relaxation. It&apos;s a place where guests can slow down, enjoy a warm beverage, and savor pastries in a calm, inviting environment. Whether visitors are working on a personal project, reading, or simply unwinding, the café encourages them to take their time and recharge.By prioritizing comfort and a sense of belonging, Resting Mug isn&apos;t just about coffee; it&apos;s about cultivating an environment that invites guests to rest, refresh, and be inspired.</p>
 
                     </div>
                 </div>
@@ -71,45 +73,19 @@
             <section>
                 <div class="project-grid">
                     <div class="project-card">
-                        <img src="img/png/restingmug-logo-bw.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
-                        <div class="project-overlay">
+                        <img src="img/webp/restingmug-logo-bw.webp" alt="Resing Mug logo black and white" width="1920" height="1080" class="project-image">
+                        < </div>
+                    </div>
+                    <div class="project-grid">
+                        <div class="project-card">
+                            <img src="img/webp/restingmug-type-color.webp" alt="Resing Mug type and colors" width="1920" height="1080" class="project-image">
+
                         </div>
                     </div>
-                </div>
-                <div class="project-grid two-column">
-                    <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                </div>
 
-                <div class="project-grid">
+                    <!-- <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/png/restingmug-colors.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="project-grid">
-                    <div class="project-card">
-                        <img src="img/jpg/restingmug-socialmedia.jpg" alt="Social Media Post for the Resting Mug" width="1920" height="1080" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div>
-                </div>
-
-
-                <div class="project-grid two-column">
-                    <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <img src="img/png/restingmug-type.png" alt="Resting mug  typeface" width="648" height="648" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -118,7 +94,62 @@
                         <div class="project-overlay">
                         </div>
                     </div>
-                </div>
+                </div> -->
+                    <!-- <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/restingmug-type-color.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div> -->
+                    <!-- <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/restingmug-colors-2.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div> -->
+
+
+                    <div class="project-grid">
+                        <div class="project-card">
+                            <img src="img/webp/restingmug-smpost.webp" alt="Social Media Post for the Resting Mug" width="1920" height="1440" class="project-image">
+
+                        </div>
+                    </div>
+
+                    <div class="project-grid">
+                        <div class="project-card">
+                            <img src="img/jpg/restingmug-people.jpg" alt="Social Media Post for the Resting Mug" width="1920" height="1080" class="project-image">
+
+                        </div>
+                    </div>
+
+                    <div class="project-grid two-column">
+                        <div class="project-card">
+                            <img src="img/webp/restingmug-cupontable.webp" alt="Boozi typeface" width="648" height="648" class="project-image">
+
+                        </div>
+                        <div class="project-card">
+                            <img src="img/webp/restingmug-togo.webp" alt="Resting Mug take out bag" width="1640" height="1641" class="project-image">
+
+                        </div>
+                    </div>
+
+                    <div class="project-grid two-column">
+                        <div class="project-card">
+                            <img src="img/webp/restingmug-sign.webp" alt="resting mug sign" width="1920" height="1440" class="project-image">
+
+                        </div>
+                        <div class="project-card">
+                            <img src="img/webp/restingmug-menu-2.webp" alt="Resting Mug menu" width="1920" height="1440" class="project-image">
+                            <div class="project-overlay">
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- 
                 <div class="project-grid three-column">
                     <div class="project-card">
                         <img src="https://placehold.co/600x400" alt="Image of Mango flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
@@ -135,19 +166,19 @@
                         <div class="project-overlay">
                         </div>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="project-grid">
-                    <div class="project-card">
-                        <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
-                        <div class="project-overlay">
+                    <div class="project-grid">
+                        <div class="project-card">
+                            <img src="img/webp/restingmug-cup.webp" alt="Cups for resting mug" width="1920" height="1280" class="project-image">
+                            <div class="project-overlay">
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="project-grid two-column">
+                    <!-- <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/webp/restingmug-brewed.webp" alt="Project 2" class="project-image">
+                        <img src="#" alt="Project 2" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
@@ -156,7 +187,7 @@
                         <div class="project-overlay">
                         </div>
                     </div>
-                </div>
+                </div> -->
 
 
             </section>
