--- a/krishnacow.html
+++ b/krishnacow.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Krishna Cow Sanctuary</title>
+    <link rel="icon" type="image/x-icon" href="img/svg/flower-logo.svg">
     <!-- META DESCRIPTION -->
     <meta name="description" content="This is Web site called Site Name. If it were real, I would provde a description of it here, so that Google and other search engines, know what this website is all about.">
 
