--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Angelica Palilio | Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="img/svg/flower-logo.svg">
 
     <!-- META DESCRIPTION -->
     <meta name="description" content="This website is my coded portfolio site that (under construction)">
