--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                 </div>
 
-                <div class="works-grid">
+                <!-- <div class="works-grid">
                     <div class="works-card">
                         <a href="restingmug.html">
                             <img src="img/jpg/resting-mug-thumbs-2.jpg" alt="Image 4" class="works-image">
@@ -128,7 +128,7 @@
                             <h3 class="project-type">Brand Identity</h3>
                         </div>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="works-grid two-column light">
                     <div class="works-card">
@@ -169,7 +169,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
-                            <li><a href="restingmug.html">Resting Mug</a></li>
+                            <!-- <li><a href="restingmug.html">Resting Mug</a></li> -->
                             <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
