--- a/krishnacow.html
+++ b/krishnacow.html
@@ -122,7 +122,7 @@
                 <div class="view-other-projects">
 
                     <ul class="_line hover-effect">
-                        <li class="prev"><a href="restingmug.html">Previous Project</a></li>
+                        <li class="prev"><a href="boozi.html">Previous Project</a></li>
                         <li><a href="index.html#project">View All Projects</a></li>
                         <li class="next"><a href="charlesandrayeames.html">Next Project</a></li>
                     </ul>
@@ -147,7 +147,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
-                            <li><a href="restingmug.html">Resting Mug</a></li>
+                            <!-- <li><a href="restingmug.html">Resting Mug</a></li> -->
                             <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
