--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
-                            <li><a href="restingmug.html">The Resting Mug</a></li>
+                            <!-- <li><a href="restingmug.html">The Resting Mug</a></li> -->
                             <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
