--- a/boozi.html
+++ b/boozi.html
@@ -148,7 +148,7 @@
                     <ul class="_line hover-effect">
                         <li class="prev"><a href="cinqueterre.html">Previous Project</a></li>
                         <li><a href="index.html#project">View All Projects</a></li>
-                        <li class="next"><a href="restingmug.html">Next Project</a></li>
+                        <li class="next"><a href="krishnacow.html">Next Project</a></li>
                     </ul>
 
                 </div>
@@ -170,7 +170,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
-                            <li><a href="restingmug.html">Resting Mug</a></li>
+                            <!-- <li><a href="restingmug.html">Resting Mug</a></li> -->
                             <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
