--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -105,7 +105,7 @@
                     <div class="view-other-projects">
 
                         <ul class="_line hover-effect">
-                            <li class="prev"><a href="#">Previous Project</a></li>
+                            <li class="prev"><a href="krishnacow.html">Previous Project</a></li>
                             <li><a href="index.html#project">View All Projects</a></li>
                             <li class="next"><a href="araw.html">Next Project</a></li>
                         </ul>
@@ -131,7 +131,7 @@
                             <li><a href="araw.html">Araw</a></li>
                             <li><a href="cinqueterre.html">Cinque Terre</a></li>
                             <li><a href="boozi.html">Boozi Hard Seltzer</a></li>
-                            <li><a href="restingmug.html">Resting Mug</a></li>
+                            <!-- <li><a href="restingmug.html">Resting Mug</a></li> -->
                             <li><a href="krishnacow.html">Krishna Cow Sanctuary</a></li>
                             <li><a href="charlesandrayeames.html">Charles and Ray Eames</a></li>
                         </ul>
